Changed FoldersConfiguration.ini file and LogFile.txt paths.

--- a/FileUpdater/NLog.config
+++ b/FileUpdater/NLog.config
@@ -7,7 +7,7 @@
       internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
 
   <targets>
-    <target name="logfile" xsi:type="File" fileName="..\..\LogFile.txt" layout="${longdate} ${uppercase:${level}} Message: ${message}"/>
+    <target name="logfile" xsi:type="File" fileName="LogFile.txt" layout="${longdate} ${uppercase:${level}} Message: ${message}"/>
   </targets>
 
   <rules>
